<resources>
    <string name="app_name">ChatApp</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="edtxt_usrname">Nickname...</string>
    <string name="edtxt_pw">Password...</string>
    <string name="edtxt_email">Email...</string>
    <string name="edtxt_usremail">User email...</string>
    <string name="btn_create_grp">Create group</string>
    <string name="btn_create_grp_done">Done</string>
    <string name="edtxt_group_name">Group name...</string>
    <string name="btn_signUp">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
